# blatant-why

./: .env.example  .gitignore  .npmignore  CLAUDE.md  LICENSE  README.md  SECURITY_AUDIT.md  launch.sh  mcp_servers  package-lock.json  package.json  plugin-manifest.json  pyproject.toml  setup.sh
.claude/: settings.json
.claude/commands/: results.md  screen.md  status.md  watch.md
.planning/: CAMPAIGN_PLAN.md  cost_analysis.md  screening_gates.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  research_brief.md  (+1 more)
assets/: blatant_why_time_parody_v4.html
campaigns/: .current_smoke_test
demo/: README.md  run_demo.mjs
docs/: FRONTEND_REBUILD_STATUS.md  LOCAL_GPU_SETUP.md
harness/: CLAUDE.md  TNF_ALPHA_RESEARCH_REPORT.md  dry-test.ts  nipah_vhh_boltzgen.yaml  nipah_vhh_design.yaml  package-lock.json  package.json  run_all_stress_tests.mjs  screenshot_mockups.mjs  stress_test.mjs  test_01_target_research.mjs  test_02_sabdab_search.mjs  test_03_literature_search.mjs  test_04_cost_estimation.mjs  test_05_screening_explanation.mjs  test_06_modality_selection.mjs  test_07_campaign_planning.mjs  test_08_liability_scanning.mjs  test_09_structure_prediction.mjs  test_10_de_novo_protein.mjs  test_5scenarios.mjs  test_mcp_servers.py  test_mockups.html  test_research_user.mjs  tnf_research.py  tsconfig.json
templates/: .gitignore-append  CLAUDE.md
tests/: test_antibody.py  test_common.py  test_config.sh  test_e2e.py  test_fold.py  test_init.sh  test_ipsae_scoring.py  test_mcp_servers.sh  test_pbind_inference.py  test_protein.py
(+314 files in other folders)
